--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.81"
+chumsky = "0.9.3"
 codespan-reporting = "0.11.1"
 gumdrop = "0.8.1"
 thiserror = "1.0.58"
