--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			// build in:
 			// 1. debug mode profile
 			// 2. debuginfo-level-std = 2
-			"args": ["build", "--package", "pyler", "--bin", "pyler", "--debug", "--no-optimize", "--debuginfo=2"],
+			"args": ["build", "--package", "compile", "--bin", "pyler", "--debug", "--no-optimize", "--debuginfo=2"],
 			"group": {
 				"kind": "build",
 				"isDefault": true
