--- a/guide/book.toml
+++ b/guide/book.toml
@@ -4,3 +4,6 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Writing a Compiler in Rust from scratch"
+
+[output.html]
+mathjax-support = true
