--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["comp_macro"] }
 [package]
 name = "compile"
 version = "0.1.0"
@@ -9,5 +10,8 @@ edition = "2021"
 anyhow = "1.0.81"
 ariadne = "0.4.0"
 chumsky = "0.9.3"
+env_logger = "0.11.3"
 gumdrop = "0.8.1"
+log = "0.4.21"
+test-log = "0.2.15"
 thiserror = "1.0.58"
