--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ gumdrop = "0.8.1"
 log = "0.4.21"
 test-log = "0.2.15"
 thiserror = "1.0.58"
+cranelift = "0.106.0"
+cranelift-codegen = "0.106.0"
+cranelift-native = "0.106.0"
+cranelift-module = "0.106.0"
+cranelift-object = "0.106.0"
