--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -41,7 +41,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
       - name: Build with mdBook
-        run: mdbook build ./book -d ./docs
+        run: mdbook build ./docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
